finished home and team pages

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Mateo Electorat'
+  github_nickname: 'the6thleaf'
+- name: 'Romain Grossard'
+  github_nickname: 'Sanchodelniglo'
